--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -211,6 +211,11 @@
     <string name="yes">Ja</string>
     <string name="no">Nee</string>
 
+    <plurals name="delete_warning">
+        <item quantity="one">WARNING: You are deleting a folder</item>
+        <item quantity="other">WARNING: You are deleting %d folders</item>
+    </plurals>
+
     <!-- Password protection -->
     <string name="pin">Pincode</string>
     <string name="enter_pin">Voer pincode in</string>
