--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -213,6 +213,11 @@
     <string name="yes">Да</string>
     <string name="no">Нет</string>
 
+    <plurals name="delete_warning">
+        <item quantity="one">WARNING: You are deleting a folder</item>
+        <item quantity="other">WARNING: You are deleting %d folders</item>
+    </plurals>
+
     <!-- Password protection -->
     <string name="pin">PIN-код</string>
     <string name="enter_pin">Ввод PIN-кода</string>
