--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -211,8 +211,8 @@
     <string name="no">No</string>
 
     <plurals name="delete_warning">
-        <item quantity="one">WARNING: You are deleting a folder</item>
-        <item quantity="other">WARNING: You are deleting %d folders</item>
+        <item quantity="one">ADVERTENCIA: está eliminando una carpeta</item>
+        <item quantity="other">ADVERTENCIA: está eliminando %d carpetas</item>
     </plurals>
 
     <!-- Password protection -->
