adding some new Favorite related strings

--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -17,6 +17,12 @@
     <string name="notes">Qeydlər</string>
     <string name="deleting_folder">Deleting folder \'%s\'</string>
 
+    <!-- Favorites -->
+    <string name="favorites">Sevimlilər</string>
+    <string name="add_favorites">Sevimlilər əlavə et</string>
+    <string name="add_to_favorites">Sevimlilərə əlavə et</string>
+    <string name="remove_from_favorites">Sevimlilərdən sil</string>
+
     <!-- Search -->
     <string name="search">Axtar</string>
     <string name="type_2_characters">Axtarışa başlamaq üçün ən az 2 simvol yazın.</string>
