--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -17,6 +17,12 @@
     <string name="notes">Notes</string>
     <string name="deleting_folder">Deleting folder \'%s\'</string>
 
+    <!-- Favorites -->
+    <string name="favorites">Favoriti</string>
+    <string name="add_favorites">Dodaj favorite</string>
+    <string name="add_to_favorites">Dodaj u favorite</string>
+    <string name="remove_from_favorites">Ukloni iz favorita</string>
+
     <!-- Search -->
     <string name="search">Traži</string>
     <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
