--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -17,6 +17,12 @@
     <string name="notes">Notes</string>
     <string name="deleting_folder">Deleting folder \'%s\'</string>
 
+    <!-- Favorites -->
+    <string name="favorites">Favorit</string>
+    <string name="add_favorites">Tambahkan Favorit</string>
+    <string name="add_to_favorites">Tambahkan Ke Favorit</string>
+    <string name="remove_from_favorites">Hapus Dari Favorit</string>
+
     <!-- Search -->
     <string name="search">Cari</string>
     <string name="type_2_characters">Ketik minimal 2 Karakter Untuk Mencari.</string>
