--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -17,6 +17,12 @@
     <string name="notes">Note</string>
     <string name="deleting_folder">Eliminazione cartella \'%s\'</string>
 
+    <!-- Favorites -->
+    <string name="favorites">Preferiti</string>
+    <string name="add_favorites">Aggiungi preferiti</string>
+    <string name="add_to_favorites">Aggiungi ai preferiti</string>
+    <string name="remove_from_favorites">Rimuovi dai preferiti</string>
+
     <!-- Search -->
     <string name="search">Cerca</string>
     <string name="type_2_characters">Digita almeno 2 caratteri per iniziare la ricerca.</string>
