--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -17,6 +17,12 @@
     <string name="notes">Užrašai</string>
     <string name="deleting_folder">Deleting folder \'%s\'</string>
 
+    <!-- Favorites -->
+    <string name="favorites">Mėgiamiausieji</string>
+    <string name="add_favorites">Pridėti mėgiamiausiuosius</string>
+    <string name="add_to_favorites">pridėti į mėgiamiausiuosius</string>
+    <string name="remove_from_favorites">Pašalinti iš mėgiamiausiųjų</string>
+
     <!-- Search -->
     <string name="search">Ieškoti</string>
     <string name="type_2_characters">Įvesti mažiausiai 2 simbolius, kad pradėti paiešką.</string>
