--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -17,6 +17,12 @@
     <string name="notes">Notities</string>
     <string name="deleting_folder">Map \'%s\' verwijderen</string>
 
+    <!-- Favorites -->
+    <string name="favorites">Favorieten</string>
+    <string name="add_favorites">Add favorites</string>
+    <string name="add_to_favorites">Aan favorieten toevoegen</string>
+    <string name="remove_from_favorites">Uit favorieten verwijderen</string>
+
     <!-- Search -->
     <string name="search">Zoeken</string>
     <string name="type_2_characters">Vul tenminste 2 tekens in.</string>
