--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -17,6 +17,12 @@
     <string name="notes">Notas</string>
     <string name="deleting_folder">Deleting folder \'%s\'</string>
 
+    <!-- Favorites -->
+    <string name="favorites">Favoritos</string>
+    <string name="add_favorites">Add favorites</string>
+    <string name="add_to_favorites">Adicionar aos favoritos</string>
+    <string name="remove_from_favorites">Remover dos favoritos</string>
+
     <!-- Search -->
     <string name="search">Pesquisar</string>
     <string name="type_2_characters">Digite pelo menos 2 letras para iniciar a pesquisa.</string>
