--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -17,6 +17,12 @@
     <string name="notes">Poznámky</string>
     <string name="deleting_folder">Odstraňuje sa priečinok \'%s\'</string>
 
+    <!-- Favorites -->
+    <string name="favorites">Obľúbené</string>
+    <string name="add_favorites">Pridať obľúbené</string>
+    <string name="add_to_favorites">Pridať medzi obľúbené</string>
+    <string name="remove_from_favorites">Odstrániť spomedzi obľúbených</string>
+
     <!-- Search -->
     <string name="search">Hľadať</string>
     <string name="type_2_characters">Zadajte aspoň 2 znaky pre spustenie hľadania.</string>
