--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -17,6 +17,12 @@
     <string name="notes">Notlar</string>
     <string name="deleting_folder">\'%s\' klasörü siliniyor</string>
 
+    <!-- Favorites -->
+    <string name="favorites">Favoriler</string>
+    <string name="add_favorites">Favori ekle</string>
+    <string name="add_to_favorites">Favorilere ekle</string>
+    <string name="remove_from_favorites">Favorilerden kaldır</string>
+
     <!-- Search -->
     <string name="search">Ara</string>
     <string name="type_2_characters">Aramaya başlamak için en az 2 karakter yazın.</string>
