--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -17,6 +17,12 @@
     <string name="notes">筆記</string>
     <string name="deleting_folder">資料夾 \'%s\' 刪除中</string>
 
+    <!-- Favorites -->
+    <string name="favorites">我的最愛</string>
+    <string name="add_favorites">添加我的最愛</string>
+    <string name="add_to_favorites">加入我的最愛</string>
+    <string name="remove_from_favorites">移除我的最愛</string>
+
     <!-- Search -->
     <string name="search">搜尋</string>
     <string name="type_2_characters">輸入兩個字以上來開始搜尋。</string>
