--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -18,10 +18,10 @@
     <string name="deleting_folder">Deleting folder \'%s\'</string>
 
     <!-- Favorites -->
-    <string name="favorites">Favorites</string>
+    <string name="favorites">المفضلة</string>
     <string name="add_favorites">Add favorites</string>
-    <string name="add_to_favorites">Add to favorites</string>
-    <string name="remove_from_favorites">Remove from favorites</string>
+    <string name="add_to_favorites">اضافة الى المفضلة</string>
+    <string name="remove_from_favorites">حذف من المفضلة</string>
 
     <!-- Search -->
     <string name="search">Search</string>
