--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -15,7 +15,13 @@
     <string name="never">Mai</string>
     <string name="details">Detalls</string>
     <string name="notes">Notes</string>
-    <string name="deleting_folder">S'està eliminant la carpeta \'%s\'</string>
+    <string name="deleting_folder">S\'està eliminant la carpeta \'%s\'</string>
+
+    <!-- Favorites -->
+    <string name="favorites">Favorites</string>
+    <string name="add_favorites">Add favorites</string>
+    <string name="add_to_favorites">Add to favorites</string>
+    <string name="remove_from_favorites">Remove from favorites</string>
 
     <!-- Search -->
     <string name="search">Buscar</string>
