--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -17,6 +17,12 @@
     <string name="notes">Noter</string>
     <string name="deleting_folder">Sletter mappen \'%s\'</string>
 
+    <!-- Favorites -->
+    <string name="favorites">Bogmærker</string>
+    <string name="add_favorites">Tilføj bogmærker</string>
+    <string name="add_to_favorites">Føj til bogmærker</string>
+    <string name="remove_from_favorites">Fjern fra bogmærker</string>
+
     <!-- Search -->
     <string name="search">Søg</string>
     <string name="type_2_characters">Start søgningen ved at skrive mindst to tegn.</string>
