--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -17,6 +17,12 @@
     <string name="notes">Notes</string>
     <string name="deleting_folder">Supprimer le dossier \'%s\'</string>
 
+    <!-- Favorites -->
+    <string name="favorites">Favoris</string>
+    <string name="add_favorites">Ajouter des favoris</string>
+    <string name="add_to_favorites">Ajouter aux favoris</string>
+    <string name="remove_from_favorites">Enlever des favoris</string>
+
     <!-- Search -->
     <string name="search">Recherche</string>
     <string name="type_2_characters">Tapez au moins 2 caractères pour lancer la recherche.</string>
