--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -17,6 +17,12 @@
     <string name="notes">Notas</string>
     <string name="deleting_folder">Deleting folder \'%s\'</string>
 
+    <!-- Favorites -->
+    <string name="favorites">Favorites</string>
+    <string name="add_favorites">Add favorites</string>
+    <string name="add_to_favorites">Add to favorites</string>
+    <string name="remove_from_favorites">Remove from favorites</string>
+
     <!-- Search -->
     <string name="search">Buscar</string>
     <string name="type_2_characters">Escribe por lo menos dos caracteres para iniciar la búsqueda.</string>
