--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -17,6 +17,12 @@
     <string name="notes">Jegyzetek</string>
     <string name="deleting_folder">Deleting folder \'%s\'</string>
 
+    <!-- Favorites -->
+    <string name="favorites">Kedvencek</string>
+    <string name="add_favorites">Add favorites</string>
+    <string name="add_to_favorites">Kedvencnek jelölés</string>
+    <string name="remove_from_favorites">Törlés a kedvencek közül</string>
+
     <!-- Search -->
     <string name="search">Search</string>
     <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
