--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -17,6 +17,12 @@
     <string name="notes">メモ</string>
     <string name="deleting_folder">Deleting folder \'%s\'</string>
 
+    <!-- Favorites -->
+    <string name="favorites">お気に入り</string>
+    <string name="add_favorites">お気に入りを追加</string>
+    <string name="add_to_favorites">お気に入りに追加</string>
+    <string name="remove_from_favorites">お気に入りから削除</string>
+
     <!-- Search -->
     <string name="search">検索</string>
     <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
