--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -17,6 +17,12 @@
     <string name="notes">Notes</string>
     <string name="deleting_folder">Deleting folder \'%s\'</string>
 
+    <!-- Favorites -->
+    <string name="favorites">즐겨찾기</string>
+    <string name="add_favorites">Add favorites</string>
+    <string name="add_to_favorites">즐겨찾기에 추가</string>
+    <string name="remove_from_favorites">즐겨찾기에서 제거</string>
+
     <!-- Search -->
     <string name="search">검색</string>
     <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
