--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -17,6 +17,12 @@
     <string name="notes">Notes</string>
     <string name="deleting_folder">Sletter mappen \'%s\'</string>
 
+    <!-- Favorites -->
+    <string name="favorites">Favoritter</string>
+    <string name="add_favorites">Legg til favoritter</string>
+    <string name="add_to_favorites">Legg til i favorittene</string>
+    <string name="remove_from_favorites">Fjern fra favorittene</string>
+
     <!-- Search -->
     <string name="search">Søk</string>
     <string name="type_2_characters">Skriv inn minst 2 tegn for å starte søket.</string>
