--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -17,6 +17,12 @@
     <string name="notes">Заметки</string>
     <string name="deleting_folder">Удаление папки \"%s\"</string>
 
+    <!-- Favorites -->
+    <string name="favorites">Избранное</string>
+    <string name="add_favorites">Добавить избранные</string>
+    <string name="add_to_favorites">Добавить в избранное</string>
+    <string name="remove_from_favorites">Убрать из избранного</string>
+
     <!-- Search -->
     <string name="search">Поиск</string>
     <string name="type_2_characters">Введите как минимум 2 символа для начала поиска.</string>
