--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -19,7 +19,7 @@
 
     <!-- Favorites -->
     <string name="favorites">Favorieten</string>
-    <string name="add_favorites">Add favorites</string>
+    <string name="add_favorites">Favorieten toevoegen</string>
     <string name="add_to_favorites">Aan favorieten toevoegen</string>
     <string name="remove_from_favorites">Uit favorieten verwijderen</string>
 
