--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -218,8 +218,8 @@
     <string name="no">No</string>
 
     <plurals name="delete_warning">
-        <item quantity="one">WARNING: You are deleting a folder</item>
-        <item quantity="other">WARNING: You are deleting %d folders</item>
+        <item quantity="one">ATTENZIONE: stai per eliminare una cartella</item>
+        <item quantity="other">ATTENZIONE: stai per eliminare %d cartelle</item>
     </plurals>
 
     <!-- Password protection -->
