--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -10,10 +10,10 @@
     <string name="no_app_found">有効なアプリが見つかりません</string>
     <string name="set_as">他で使う</string>
     <string name="value_copied_to_clipboard">値をクリップボードにコピーしました</string>
-    <string name="unknown">Unknown</string>
+    <string name="unknown">不明</string>
     <string name="always">Always</string>
     <string name="never">Never</string>
-    <string name="details">Details</string>
+    <string name="details">詳細</string>
     <string name="notes">メモ</string>
     <string name="deleting_folder">Deleting folder \'%s\'</string>
 
@@ -25,12 +25,12 @@
 
     <!-- Search -->
     <string name="search">検索</string>
-    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
+    <string name="type_2_characters">検索を開始するには少なくとも2文字以上入力してください。</string>
 
     <!-- Filters -->
-    <string name="filter">Filter</string>
-    <string name="no_items_found">No items found.</string>
-    <string name="change_filter">Change filter</string>
+    <string name="filter">フィルタ</string>
+    <string name="no_items_found">何も見つかりませんでした。</string>
+    <string name="change_filter">フィルタを変更</string>
 
     <!-- Permissions -->
     <string name="no_storage_permissions">Storage permission is required</string>
@@ -40,14 +40,14 @@
 
     <!-- Renaming -->
     <string name="rename_file">ファイルの名前を変更</string>
-    <string name="rename_folder">フォルダーの名前を変更</string>
+    <string name="rename_folder">フォルダの名前を変更</string>
     <string name="rename_file_error">ファイルの名前を変更できませんでした</string>
-    <string name="rename_folder_error">フォルダーの名前を変更できませんでした</string>
-    <string name="rename_folder_empty">フォルダー名は空にできません</string>
-    <string name="rename_folder_exists">その名前のフォルダーは既に存在します</string>
-    <string name="rename_folder_root">ストレージのルートフォルダーの名前を変更できません</string>
-    <string name="rename_folder_ok">フォルダーの名前を正常に変更しました</string>
-    <string name="renaming_folder">フォルダーの名前を変更中</string>
+    <string name="rename_folder_error">フォルダの名前を変更できませんでした</string>
+    <string name="rename_folder_empty">フォルダ名は空にできません</string>
+    <string name="rename_folder_exists">その名前のフォルダは既に存在します</string>
+    <string name="rename_folder_root">ストレージのルートフォルダの名前を変更できません</string>
+    <string name="rename_folder_ok">フォルダの名前を正常に変更しました</string>
+    <string name="renaming_folder">フォルダの名前を変更中</string>
     <string name="filename_cannot_be_empty">ファイル名は空にできません</string>
     <string name="filename_invalid_characters">ファイル名に無効な文字が含まれています</string>
     <string name="filename_invalid_characters_placeholder">Filename \'%s\' contains invalid characters</string>
@@ -77,22 +77,22 @@
     <string name="copying_success_partial">一部のファイルがコピーできませんでした</string>
     <string name="no_files_selected">ファイルが選択されていません</string>
     <string name="saving">保存中…</string>
-    <string name="could_not_create_folder">フォルダー %s を作成できません</string>
+    <string name="could_not_create_folder">フォルダ %s を作成できません</string>
     <string name="could_not_create_file">ファイル %s を作成できません</string>
 
     <!-- Create new -->
     <string name="create_new">新規作成</string>
-    <string name="folder">フォルダー</string>
+    <string name="folder">フォルダ</string>
     <string name="file">ファイル</string>
     <string name="create_new_folder">フォルダ新規作成</string>
-    <string name="name_taken">同名のファイルまたはフォルダーが既に存在しています</string>
+    <string name="name_taken">同名のファイルまたはフォルダが既に存在しています</string>
     <string name="invalid_name">名前に無効な文字が含まれています</string>
     <string name="empty_name">名前を入力してください</string>
     <string name="unknown_error_occurred">不明なエラーが発生しました</string>
 
     <!-- File operation conflicts -->
     <string name="file_already_exists">ファイル \"%s\" は既に存在しています</string>
-    <string name="file_already_exists_overwrite">ファイル \"%s\" は既に存在しています。上書きしますか?</string>
+    <string name="file_already_exists_overwrite">ファイル \"%s\" は既に存在しています。上書きしますか？</string>
     <string name="folder_already_exists">Folder \"%s\" already exists</string>
     <string name="merge">Merge</string>
     <string name="overwrite">上書き</string>
@@ -101,10 +101,10 @@
     <string name="apply_to_all">すべてに適用</string>
 
     <!-- File picker -->
-    <string name="select_folder">フォルダーを選択</string>
+    <string name="select_folder">フォルダを選択</string>
     <string name="select_file">ファイルを選択</string>
     <string name="confirm_storage_access_title">外部ストレージのアクセスを確認してください</string>
-    <string name="confirm_storage_access_text">次の画面で SD カードのルートフォルダーを選択して、書き込みアクセス許可を付与してください</string>
+    <string name="confirm_storage_access_text">次の画面で SD カードのルートフォルダを選択して、書き込みアクセス許可を付与してください</string>
     <string name="confirm_storage_access_text_sd">SD カードの内容が表示されない場合は、こちらをお試しください</string>
     <string name="confirm_selection">Confirm selection</string>
 
@@ -115,8 +115,8 @@
 
     <!-- Are you sure you want to delete 5 items? -->
     <plurals name="delete_items">
-        <item quantity="one">%d item</item>
-        <item quantity="other">%d items</item>
+        <item quantity="one">%d アイテム</item>
+        <item quantity="other">%d アイテム</item>
     </plurals>
 
     <!-- Storages -->
@@ -124,7 +124,7 @@
     <string name="internal">内部</string>
     <string name="sd_card">SD カード</string>
     <string name="root">ルート</string>
-    <string name="wrong_root_selected">フォルダーの選択が正しくありません。SD カードを選択してください</string>
+    <string name="wrong_root_selected">フォルダの選択が正しくありません。SD カードを選択してください</string>
     <string name="sd_card_otg_same">SD card and OTG device paths cannot be the same</string>
 
     <!-- File properties -->
@@ -143,13 +143,13 @@
     <string name="f_number">絞り値</string>
     <string name="camera">カメラ名</string>
     <string name="exif">EXIF</string>
-    <string name="song_title">Song title</string>
+    <string name="song_title">曲名</string>
 
     <!-- Color customization -->
     <string name="background_color">背景色</string>
     <string name="text_color">文字色</string>
     <string name="primary_color">メインカラー</string>
-    <string name="foreground_color">Foreground color</string>
+    <string name="foreground_color">前景色</string>
     <string name="app_icon_color">App icon color</string>
     <string name="restore_defaults">デフォルトに戻す</string>
     <string name="change_color">Change color</string>
@@ -158,8 +158,8 @@
     <string name="save">保存</string>
     <string name="discard">破棄</string>
     <string name="undo_changes">変更を元に戻す</string>
-    <string name="undo_changes_confirmation">変更を元に戻してもよろしいですか?</string>
-    <string name="save_before_closing">保存していない変更があります。保存しますか?</string>
+    <string name="undo_changes_confirmation">変更を元に戻してもよろしいですか？</string>
+    <string name="save_before_closing">保存していない変更があります。保存しますか？</string>
     <string name="apply_to_all_apps">Apply colors to all Simple Apps</string>
     <string name="share_colors_success">Colors updated successfully. A new Theme called \'Shared\' has been added, please use that for updating all app colors in the future.</string>
     <string name="purchase_thank_you">
@@ -190,14 +190,14 @@
     <string name="select_all">すべて選択</string>
     <string name="hide">非表示</string>
     <string name="unhide">再表示</string>
-    <string name="hide_folder">フォルダーを非表示</string>
-    <string name="unhide_folder">フォルダーを再表示</string>
+    <string name="hide_folder">フォルダを非表示</string>
+    <string name="unhide_folder">フォルダを再表示</string>
     <string name="temporarily_show_hidden">非表示の項目を一時的に表示</string>
     <string name="stop_showing_hidden">非表示項目を表示しない</string>
     <string name="maximum_share_reached">You cannot share this much content at once</string>
 
     <!-- Sorting -->
-    <string name="sort_by">並び替え</string>
+    <string name="sort_by">並べ替え</string>
     <string name="name">名前</string>
     <string name="size">サイズ</string>
     <string name="last_modified">最終更新日時</string>
@@ -207,12 +207,12 @@
     <string name="extension">拡張子</string>
     <string name="ascending">昇順</string>
     <string name="descending">降順</string>
-    <string name="use_for_this_folder">このフォルダーのみに適用</string>
+    <string name="use_for_this_folder">このフォルダのみに適用</string>
 
     <!-- Confirmation dialog -->
-    <string name="proceed_with_deletion">削除を続行してもよろしいですか?</string>
-    <string name="deletion_confirmation">Are you sure you want to delete %s?</string>    <!-- Are you sure you want to delete 5 items? -->
-    <string name="move_to_recycle_bin_confirmation">Are you sure you want to move %s to Recycle Bin?</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
+    <string name="proceed_with_deletion">削除を続行してもよろしいですか？</string>
+    <string name="deletion_confirmation">%s を削除してもよろしいですか？</string>    <!-- Are you sure you want to delete 5 items? -->
+    <string name="move_to_recycle_bin_confirmation">%s をゴミ箱に移動してもよろしいですか？</string>    <!-- Are you sure you want to move 3 items to Recycle Bin? -->
     <string name="do_not_ask_again">このセッションでは再度たずねない</string>
     <string name="yes">はい</string>
     <string name="no">いいえ</string>
@@ -238,13 +238,13 @@
     <string name="authentication_failed">Authentication failed</string>
     <string name="authentication_blocked">Authentication blocked, please try again in a moment</string>
     <string name="no_fingerprints_registered">You have no fingerprints registered, please add some in the Settings of your device</string>
-    <string name="go_to_settings">Go to Settings</string>
+    <string name="go_to_settings">設定に移動</string>
     <string name="protection_setup_successfully">パスワードの設定が完了しました。パスワードを紛失した場合は、アプリを再インストールしてください</string>
     <string name="fingerprint_setup_successfully">Protection setup successfully. Please reinstall the app in case of problems with reseting it.</string>
 
     <!-- Times -->
-    <string name="tomorrow">Tomorrow</string>
-    <string name="seconds_raw">seconds</string>
+    <string name="tomorrow">明日</string>
+    <string name="seconds_raw">秒</string>
     <string name="minutes_raw">分</string>
     <string name="hours_raw">時間</string>
     <string name="days_raw">日</string>
@@ -262,66 +262,66 @@
         <item quantity="other">%d時間</item>
     </plurals>
     <plurals name="days">
-        <item quantity="one">%d day</item>
-        <item quantity="other">%d days</item>
+        <item quantity="one">%d日</item>
+        <item quantity="other">%d日</item>
     </plurals>
     <plurals name="weeks">
-        <item quantity="one">%d week</item>
-        <item quantity="other">%d weeks</item>
+        <item quantity="one">%d週</item>
+        <item quantity="other">%d週</item>
     </plurals>
     <plurals name="months">
-        <item quantity="one">%d month</item>
-        <item quantity="other">%d months</item>
+        <item quantity="one">%dヶ月</item>
+        <item quantity="other">%dヶ月</item>
     </plurals>
     <plurals name="years">
-        <item quantity="one">%d year</item>
-        <item quantity="other">%d years</item>
+        <item quantity="one">%d年</item>
+        <item quantity="other">%d年</item>
     </plurals>
 
     <!-- For example: I will be there in 5 minutes -->
     <plurals name="in_seconds">
-        <item quantity="one">%d second</item>
-        <item quantity="other">%d seconds</item>
+        <item quantity="one">%d秒</item>
+        <item quantity="other">%d秒</item>
     </plurals>
     <plurals name="in_minutes">
-        <item quantity="one">%d minute</item>
-        <item quantity="other">%d minutes</item>
+        <item quantity="one">%d分</item>
+        <item quantity="other">%d分</item>
     </plurals>
     <plurals name="in_hours">
-        <item quantity="one">%d hour</item>
-        <item quantity="other">%d hours</item>
+        <item quantity="one">%d時間</item>
+        <item quantity="other">%d時間</item>
     </plurals>
 
     <!-- For example: Event reminder: 3 minutes before -->
     <plurals name="seconds_before">
-        <item quantity="one">%d second before</item>
-        <item quantity="other">%d seconds before</item>
+        <item quantity="one">%d秒前</item>
+        <item quantity="other">%d秒前</item>
     </plurals>
     <plurals name="minutes_before">
-        <item quantity="one">%d minute before</item>
-        <item quantity="other">%d 分 前</item>
+        <item quantity="one">%d分前</item>
+        <item quantity="other">%d分前</item>
     </plurals>
     <plurals name="hours_before">
-        <item quantity="one">%d hour before</item>
-        <item quantity="other">%d 時間 前</item>
+        <item quantity="one">%d時間前</item>
+        <item quantity="other">%d時間前</item>
     </plurals>
     <plurals name="days_before">
-        <item quantity="one">%d day before</item>
-        <item quantity="other">%d 日 前</item>
+        <item quantity="one">%d日前</item>
+        <item quantity="other">%d日前</item>
     </plurals>
 
     <!-- For example: Postpone reminder by 3 minutes -->
     <plurals name="by_seconds">
-        <item quantity="one">%d second</item>
-        <item quantity="other">%d seconds</item>
+        <item quantity="one">%d秒</item>
+        <item quantity="other">%d秒</item>
     </plurals>
     <plurals name="by_minutes">
-        <item quantity="one">%d minute</item>
-        <item quantity="other">%d minutes</item>
+        <item quantity="one">%d分</item>
+        <item quantity="other">%d分</item>
     </plurals>
     <plurals name="by_hours">
-        <item quantity="one">%d hour</item>
-        <item quantity="other">%d hours</item>
+        <item quantity="one">%d時</item>
+        <item quantity="other">%d時</item>
     </plurals>
 
     <!-- For example: Time remaining till the alarm goes off: 6 hours, 5 minutes -->
@@ -345,7 +345,7 @@
     <string name="customize_colors">表示色のカスタマイズ</string>
     <string name="customize_widget_colors">Customize widget colors</string>
     <string name="use_english_language">Use English language</string>
-    <string name="avoid_whats_new">Avoid showing What\'s New on startup</string>
+    <string name="avoid_whats_new">起動時に更新履歴を表示しない</string>
     <string name="show_hidden_items">Show hidden items</string>
     <string name="font_size">メモのフォントサイズ</string>
     <string name="small">小</string>
@@ -359,9 +359,9 @@
     <string name="prevent_phone_from_sleeping">Prevent phone from sleeping while the app is in foreground</string>
     <string name="skip_delete_confirmation">Always skip delete confirmation dialog</string>
     <string name="enable_pull_to_refresh">Enable pull-to-refresh from the top</string>
-    <string name="use_24_hour_time_format">Use 24-hour time format</string>
+    <string name="use_24_hour_time_format">24時間表示を使用</string>
     <string name="sunday_first">Start week on Sunday</string>
-    <string name="widgets">Widgets</string>
+    <string name="widgets">ウィジェット</string>
     <string name="use_same_snooze">Always use same snooze time</string>
     <string name="snooze_time">Snooze time</string>
     <string name="vibrate_on_button_press">Vibrate on button press</string>
@@ -520,11 +520,11 @@
     <string name="photoview_title">PhotoView (GIF画像のズーム表示)</string>
     <string name="pattern_title">PatternLockView (パターン認証)</string>
     <string name="reprint_title">Reprint (fingerprint protection)</string>
-    <string name="gif_drawable_title">Gif Drawable (loading GIFs)</string>
+    <string name="gif_drawable_title">Gif Drawable (GIF画像の読み込み)</string>
     <string name="autofittextview_title">AutoFitTextView (resizing text)</string>
     <string name="robolectric_title">Robolectric (testing framework)</string>
     <string name="espresso_title">Espresso (testing helper)</string>
     <string name="gson_title">Gson (JSON parser)</string>
-    <string name="leak_canary_title">Leak Canary (memory leak detector)</string>
+    <string name="leak_canary_title">Leak Canary (メモリリークの検出)</string>
     <string name="number_picker_title">Number Picker (customizable number picker)</string>
 </resources>
