--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -194,6 +194,7 @@
     <string name="temporarily_show_hidden">Mostrar amagats temporalment</string>
     <string name="stop_showing_hidden">Deixar de mostrar mitjans amagats</string>
     <string name="maximum_share_reached">No pots compartir aquest contingut alhora</string>
+    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar per</string>
@@ -367,10 +368,9 @@
     <string name="use_same_snooze">Utilitzeu sempre el mateix temps de posposat</string>
     <string name="snooze_time">Temps de posposat</string>
     <string name="vibrate_on_button_press">Vibrar al prŕmer un botó</string>
-    <string name="move_items_to_trash_bin">Mou elements a la paperera de reciclatge en lloc de suprimir-los</string>
+    <string name="move_items_to_recycle_bin">Mou elements a la paperera de reciclatge en lloc de suprimir-los</string>
     <string name="recycle_bin_cleaning_interval">Interval de neteja de paperera de reciclatge</string>
     <string name="empty_recycle_bin">Buida la paperera de reciclatge</string>
-    <string name="recycle_bin_location">Ubicació de la paperera de reciclatge</string>
     <string name="force_portrait_mode">Força el mode de retrat</string>
 
     <!-- Setting sections -->
