--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -195,6 +195,7 @@
     <string name="temporarily_show_hidden">Dočasně zobrazit skryté</string>
     <string name="stop_showing_hidden">Stop showing hidden media</string>
     <string name="maximum_share_reached">You cannot share this much content at once</string>
+    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
 
     <!-- Sorting -->
     <string name="sort_by">Seřadit dle</string>
@@ -382,10 +383,9 @@
     <string name="use_same_snooze">Always use same snooze time</string>
     <string name="snooze_time">Snooze time</string>
     <string name="vibrate_on_button_press">Vibrate on button press</string>
-    <string name="move_items_to_trash_bin">Move items in Recycle Bin instead of deleting</string>
+    <string name="move_items_to_recycle_bin">Move items in Recycle Bin instead of deleting</string>
     <string name="recycle_bin_cleaning_interval">Recycle Bin cleaning interval</string>
     <string name="empty_recycle_bin">Empty Recycle Bin</string>
-    <string name="recycle_bin_location">Recycle Bin location</string>
     <string name="force_portrait_mode">Force portrait mode</string>
 
     <!-- Setting sections -->
