--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -195,6 +195,7 @@
     <string name="temporarily_show_hidden">Afficher temporairement les fichiers masqués</string>
     <string name="stop_showing_hidden">Arrêter d\'afficher les medias masqués</string>
     <string name="maximum_share_reached">Vous ne pouvez pas partager autant de contenu à la fois</string>
+    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
 
     <!-- Sorting -->
     <string name="sort_by">Trier par</string>
@@ -365,10 +366,9 @@
     <string name="use_same_snooze">Toujours utiliser le même intervalle de répétition</string>
     <string name="snooze_time">Temps de répétition</string>
     <string name="vibrate_on_button_press">Vibrer lors de l\'appui sur un bouton</string>
-    <string name="move_items_to_trash_bin">Déplacer les éléments vers la corbeille au lieu de les supprimer</string>
+    <string name="move_items_to_recycle_bin">Déplacer les éléments vers la corbeille au lieu de les supprimer</string>
     <string name="recycle_bin_cleaning_interval">Interval de vidage de la corbeille</string>
     <string name="empty_recycle_bin">Vider la corbeille</string>
-    <string name="recycle_bin_location">Emplacement de la corbeille</string>
     <string name="force_portrait_mode">Forcer le mode portrait</string>
 
     <!-- Setting sections -->
