--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -197,6 +197,7 @@
     <string name="temporarily_show_hidden">Privremeno prikaži skriveno</string>
     <string name="stop_showing_hidden">Zaustavi prikazivanje skrivenih stavki</string>
     <string name="maximum_share_reached">Nije moguće dijeliti ovoliko stavki odjednom</string>
+    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortiraj po</string>
@@ -384,10 +385,9 @@
     <string name="use_same_snooze">Always use same snooze time</string>
     <string name="snooze_time">Snooze time</string>
     <string name="vibrate_on_button_press">Vibrate on button press</string>
-    <string name="move_items_to_trash_bin">Move items in Recycle Bin instead of deleting</string>
+    <string name="move_items_to_recycle_bin">Move items in Recycle Bin instead of deleting</string>
     <string name="recycle_bin_cleaning_interval">Recycle Bin cleaning interval</string>
     <string name="empty_recycle_bin">Empty Recycle Bin</string>
-    <string name="recycle_bin_location">Recycle Bin location</string>
     <string name="force_portrait_mode">Force portrait mode</string>
 
     <!-- Setting sections -->
