--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -195,6 +195,7 @@
     <string name="temporarily_show_hidden">Laikinai rodyti paslėptus</string>
     <string name="stop_showing_hidden">Neberodyti paslėptų bylų</string>
     <string name="maximum_share_reached">Negalite bendrinti tiek daug turinio vienu metu</string>
+    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
 
     <!-- Sorting -->
     <string name="sort_by">Rūšiuoti pagal</string>
@@ -382,10 +383,9 @@
     <string name="use_same_snooze">Visada naudoti tą patį snaudimo laiką</string>
     <string name="snooze_time">Snaudimo laikas</string>
     <string name="vibrate_on_button_press">Vibruoti kai spaudžiami mygtukai</string>
-    <string name="move_items_to_trash_bin">Perkelti elementus į šiukšlinę vietoj ištrynimo</string>
+    <string name="move_items_to_recycle_bin">Perkelti elementus į šiukšlinę vietoj ištrynimo</string>
     <string name="recycle_bin_cleaning_interval">Šiukšlinės išvalymo intervalas</string>
     <string name="empty_recycle_bin">Ištuštinti šiukšlinę</string>
-    <string name="recycle_bin_location">Šiukšlinės vieta</string>
     <string name="force_portrait_mode">Priversti rodyti portreto rėžimu</string>
 
     <!-- Setting sections -->
