--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -195,6 +195,7 @@
     <string name="temporarily_show_hidden">Vis skjulte midlertidig</string>
     <string name="stop_showing_hidden">Stopp å vise skjulte media</string>
     <string name="maximum_share_reached">Du kan ikke dele så mye innhold på en gang</string>
+    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorter etter</string>
@@ -365,10 +366,9 @@
     <string name="use_same_snooze">Bruk alltid samme intervall for Snooze</string>
     <string name="snooze_time">Intervall for Snooze</string>
     <string name="vibrate_on_button_press">Vibrer ved trykk på knapper</string>
-    <string name="move_items_to_trash_bin">Flytt elementer til papirkurven istedenfor å slette dem</string>
+    <string name="move_items_to_recycle_bin">Flytt elementer til papirkurven istedenfor å slette dem</string>
     <string name="recycle_bin_cleaning_interval">Tømmeintervall for papirkurven</string>
     <string name="empty_recycle_bin">Tøm papirkurven</string>
-    <string name="recycle_bin_location">Papirkurvplassering</string>
     <string name="force_portrait_mode">Påtving portrettmodus</string>
 
     <!-- Setting sections -->
