--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -195,6 +195,7 @@
     <string name="temporarily_show_hidden">Verborgen items tonen</string>
     <string name="stop_showing_hidden">Verborgen items niet tonen</string>
     <string name="maximum_share_reached">Kan niet zoveel items tegelijk delen</string>
+    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorteren op</string>
@@ -365,10 +366,9 @@
     <string name="use_same_snooze">Altijd dezelfde interval voor uitstellen gebruiken</string>
     <string name="snooze_time">Interval bij uitstellen</string>
     <string name="vibrate_on_button_press">Trillen bij het indrukken van knoppen</string>
-    <string name="move_items_to_trash_bin">Items niet verwijderen, maar verplaatsen naar prullenbak</string>
+    <string name="move_items_to_recycle_bin">Items niet verwijderen, maar verplaatsen naar prullenbak</string>
     <string name="recycle_bin_cleaning_interval">Interval prullenbak leegmaken</string>
     <string name="empty_recycle_bin">Prullenbak leegmaken</string>
-    <string name="recycle_bin_location">Locatie prullenbak</string>
     <string name="force_portrait_mode">Portretmodus forceren</string>
 
     <!-- Setting sections -->
