--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -195,6 +195,7 @@
     <string name="temporarily_show_hidden">Mostrar pastas ocultas temporariamente</string>
     <string name="stop_showing_hidden">Parar de exibir mídia oculta</string>
     <string name="maximum_share_reached">Não é possível compartilhar essa quantidade toda de arquivos de uma vez</string>
+    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
@@ -365,10 +366,9 @@
     <string name="use_same_snooze">Sempre usar o mesmo tempo de soneca</string>
     <string name="snooze_time">Tempo de soneca</string>
     <string name="vibrate_on_button_press">Vibrar ao pressionar o botão</string>
-    <string name="move_items_to_trash_bin">Mover itens na Lixeira em vez de excluir</string>
+    <string name="move_items_to_recycle_bin">Mover itens na Lixeira em vez de excluir</string>
     <string name="recycle_bin_cleaning_interval">Intervalo de limpeza da Lixeira</string>
     <string name="empty_recycle_bin">Lixeira vazia</string>
-    <string name="recycle_bin_location">Localização da Lixeira</string>
     <string name="force_portrait_mode">Forçar modo retrato</string>
 
     <!-- Setting sections -->
