--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -197,6 +197,7 @@
     <string name="temporarily_show_hidden">Временный показ скрытых</string>
     <string name="stop_showing_hidden">Не показывать скрытые медиа</string>
     <string name="maximum_share_reached">Слишком большой объём данных, чтобы делиться им</string>
+    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
 
     <!-- Sorting -->
     <string name="sort_by">Сортировать по…</string>
@@ -394,10 +395,9 @@
     <string name="use_same_snooze">Всегда использовать один и тот же интервал повтора</string>
     <string name="snooze_time">Интервал повтора</string>
     <string name="vibrate_on_button_press">Вибрация при нажатии кнопок</string>
-    <string name="move_items_to_trash_bin">Перемещать объекты в корзину вместо удаления</string>
+    <string name="move_items_to_recycle_bin">Перемещать объекты в корзину вместо удаления</string>
     <string name="recycle_bin_cleaning_interval">Интервал очистки корзины</string>
     <string name="empty_recycle_bin">Очистить корзину</string>
-    <string name="recycle_bin_location">Расположение корзины</string>
     <string name="force_portrait_mode">Принудительный портретный режим</string>
 
     <!-- Setting sections -->
