--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -197,6 +197,7 @@
     <string name="temporarily_show_hidden">Dočasne zobraziť skryté</string>
     <string name="stop_showing_hidden">Ukončiť zobrazovanie skrytých médií</string>
     <string name="maximum_share_reached">Nemôžete zdieľať toľko obsahu naraz</string>
+    <string name="empty_and_disable_recycle_bin">Vysypať a deaktivovať odpadkový kôš</string>
 
     <!-- Sorting -->
     <string name="sort_by">Na zoradenie použiť</string>
@@ -385,10 +386,9 @@
     <string name="use_same_snooze">Použiť stále rovnaký čas s Odložiť</string>
     <string name="snooze_time">Čas odloženia</string>
     <string name="vibrate_on_button_press">Vibrovať pri stlačení tlačidiel</string>
-    <string name="move_items_to_trash_bin">Presunúť položky miesto vymazania do odpadkového koša</string>
+    <string name="move_items_to_recycle_bin">Presunúť položky miesto vymazania do odpadkového koša</string>
     <string name="recycle_bin_cleaning_interval">Interval vysypávania koša</string>
-    <string name="empty_recycle_bin">Vysypať odpadkový kôď</string>
-    <string name="recycle_bin_location">Umiestnenie odpadkového koša</string>
+    <string name="empty_recycle_bin">Vysypať odpadkový kôš</string>
     <string name="force_portrait_mode">Stále použiť režim na výšku</string>
 
     <!-- Setting sections -->
