--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -195,6 +195,7 @@
     <string name="temporarily_show_hidden">Visa dolda objekt tillfälligt</string>
     <string name="stop_showing_hidden">Sluta visa dolda objekt</string>
     <string name="maximum_share_reached">Du kan inte dela så här mycket innehåll på en gång</string>
+    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortera efter</string>
@@ -365,10 +366,9 @@
     <string name="use_same_snooze">Använd alltid samma snooze-intervall</string>
     <string name="snooze_time">Snooze-intervall</string>
     <string name="vibrate_on_button_press">Vibrera när jag trycker på knapparna</string>
-    <string name="move_items_to_trash_bin">Flytta objekt till Papperskorgen istället för att ta bort dem</string>
+    <string name="move_items_to_recycle_bin">Flytta objekt till Papperskorgen istället för att ta bort dem</string>
     <string name="recycle_bin_cleaning_interval">Rensningsintervall för Papperskorgen</string>
     <string name="empty_recycle_bin">Töm Papperskorgen</string>
-    <string name="recycle_bin_location">Plats för Papperskorgen</string>
     <string name="force_portrait_mode">Lås skärmen i stående läge</string>
 
     <!-- Setting sections -->
