--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -195,6 +195,7 @@
     <string name="temporarily_show_hidden">Geçici olarak gizliyi göster</string>
     <string name="stop_showing_hidden">Gizli medyayı göstermeyi bırak</string>
     <string name="maximum_share_reached">Bu kadar çok içeriği bir kerede paylaşamazsınız</string>
+    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sıralama ölçütü</string>
@@ -365,10 +366,9 @@
     <string name="use_same_snooze">Her zaman aynı erteleme süresini kullan</string>
     <string name="snooze_time">Erteleme süresi</string>
     <string name="vibrate_on_button_press">Düğmeye basıldığında titret</string>
-    <string name="move_items_to_trash_bin">Öğeleri silmek yerine Geri Dönüşüm Kutusuna taşı</string>
+    <string name="move_items_to_recycle_bin">Öğeleri silmek yerine Geri Dönüşüm Kutusuna taşı</string>
     <string name="recycle_bin_cleaning_interval">Geri Dönüşüm Kutusu temizleme süresi</string>
     <string name="empty_recycle_bin">Geri Dönüşüm Kutusunu boşalt</string>
-    <string name="recycle_bin_location">Geri Dönüşüm Kutusu konumu</string>
     <string name="force_portrait_mode">Dikey modu zorla</string>
 
     <!-- Setting sections -->
