--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -195,6 +195,7 @@
     <string name="temporarily_show_hidden">显示／隐藏缓存内容</string>
     <string name="stop_showing_hidden">不显示隐藏的媒体文件</string>
     <string name="maximum_share_reached">您不能一次分享太多的内容</string>
+    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
 
     <!-- Sorting -->
     <string name="sort_by">排序方式</string>
@@ -365,10 +366,9 @@
     <string name="use_same_snooze">始终使用相同的贪睡时间</string>
     <string name="snooze_time">贪睡时间</string>
     <string name="vibrate_on_button_press">按下按键后震动</string>
-    <string name="move_items_to_trash_bin">Move items in Recycle Bin instead of deleting</string>
+    <string name="move_items_to_recycle_bin">Move items in Recycle Bin instead of deleting</string>
     <string name="recycle_bin_cleaning_interval">Recycle Bin cleaning interval</string>
     <string name="empty_recycle_bin">Empty Recycle Bin</string>
-    <string name="recycle_bin_location">Recycle Bin location</string>
     <string name="force_portrait_mode">Force portrait mode</string>
 
     <!-- Setting sections -->
