--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -194,6 +194,7 @@
     <string name="temporarily_show_hidden">暫時顯示隱藏的檔案</string>
     <string name="stop_showing_hidden">停止顯示隱藏的檔案</string>
     <string name="maximum_share_reached">你不能一次分享這麼多內容</string>
+    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
 
     <!-- Sorting -->
     <string name="sort_by">排序</string>
@@ -364,10 +365,9 @@
     <string name="use_same_snooze">總是使用相同延遲間隔</string>
     <string name="snooze_time">延遲時間</string>
     <string name="vibrate_on_button_press">按下按鈕時震動</string>
-    <string name="move_items_to_trash_bin">將項目移入回收桶取代刪除</string>
+    <string name="move_items_to_recycle_bin">將項目移入回收桶取代刪除</string>
     <string name="recycle_bin_cleaning_interval">回收桶清理間隔</string>
     <string name="empty_recycle_bin">空白回收桶</string>
-    <string name="recycle_bin_location">回收桶位置</string>
     <string name="force_portrait_mode">強制直向模式</string>
 
     <!-- Setting sections -->
